finish Day 1 parts 1&2

--- a/1/two.ipynb
+++ b/1/two.ipynb
@@ -2,98 +2,94 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "54953\n"
-     ]
-    }
-   ],
-   "source": [
-    "calibration_values = []\n",
-    "with open('calibration_document.txt', 'r') as calibration_document:\n",
-    "    lines = (line for line in (line.rstrip() for line in calibration_document.readlines()) if line)\n",
-    "for line in lines:\n",
-    "    current_line = {\"first\": \"\",\"last\": \"\",}\n",
-    "    for char in line:\n",
-    "        if char.isnumeric() and current_line['first'] is None:\n",
-    "            current_line['first'] = char\n",
-    "        if char.isnumeric():\n",
-    "            current_line['last'] = char\n",
-    "    calibration_values.append(int(f\"{current_line['first']}{current_line['last']}\"))\n",
-    "print(sum(calibration_values))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-01T16:40:40.568935Z",
-     "start_time": "2023-12-01T16:40:40.558718Z"
-    }
-   },
-   "id": "a8e9556d5a9ba4a2"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "id": "aeadf672-5903-47fc-83d7-b12487332a37",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T16:44:30.303836Z",
-     "start_time": "2023-12-01T16:44:30.289361Z"
+     "end_time": "2023-12-01T23:18:15.681243700Z",
+     "start_time": "2023-12-01T23:18:15.669462Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "53885\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import re\n",
+    "import regex as re\n",
     "\n",
-    "units = {\"zero\":\"0\",\"one\":\"1\",\"two\":\"2\",\"three\":\"3\",\"four\":\"4\",\"five\":\"5\",\"six\":\"6\",\"seven\":\"7\",\"eight\":\"8\",\"nine\":\"9\"}\n",
-    "pattern = \"zero|one|two|three|four|five|six|seven|eight|nine\"\n",
-    "numbers = []\n",
-    "\n",
-    "with open('calibration_document.txt', 'r') as calibration_document:\n",
-    "    lines = (line for line in (line.rstrip() for line in calibration_document.readlines()) if line)\n",
-    "    \n",
-    "for line in lines:\n",
-    "    literal_numbers = {}\n",
-    "    current_line = { \"first\": \"\",\"last\": \"\",}\n",
-    "    matches = re.findall(pattern, line)\n",
-    "    if matches:\n",
-    "        line = line.replace(matches[0], units[matches[0]], 1)\n",
-    "        line = line.replace(matches[-1], units[matches[-1]], -1)\n",
-    "    \n",
-    "    for char in enumerate(line):\n",
-    "        if char.isnumeric() and not current_line['first']:\n",
-    "            current_line['first'] = char\n",
-    "        if char.isnumeric():\n",
-    "            current_line['last'] = char\n",
-    "    numbers.append(int(f\"{current_line['first']}{current_line['last']}\"))\n",
-    "    \n",
-    "print(sum(numbers))\n"
+    "numbers = {\"one\":\"1e\",\"two\":\"2o\",\"three\":\"3e\",\"four\":\"4r\",\"five\":\"5e\",\"six\":\"6x\",\"seven\":\"7n\",\"eight\":\"8t\",\"nine\":\"9e\"}\n",
+    "pattern = \"one|two|three|four|five|six|seven|eight|nine\"\n",
+    "calibration_values = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "b8da401f-79cb-4af5-b082-e8a82523a746",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "with open('calibration_document.txt', 'r') as calibration_document:\n",
+    "    lines = (line for line in (line.rstrip() for line in calibration_document.readlines()) if line)"
+   ],
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-01T16:11:47.601407Z",
-     "start_time": "2023-12-01T16:11:47.599778Z"
+     "end_time": "2023-12-01T23:18:15.684824700Z",
+     "start_time": "2023-12-01T23:18:15.681243700Z"
     }
    },
+   "id": "9cd80b3f60be877f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "outputs": [],
-   "source": []
+   "source": [
+    "for line in lines:\n",
+    "    sourceline = line\n",
+    "    current_line = { \"first\": \"\",\"last\": \"\",}\n",
+    "    matches = re.findall(pattern, line, overlapped=True)\n",
+    "    for i, match in enumerate(matches):\n",
+    "        line = line.replace(matches[i], numbers[matches[i]], 1)\n",
+    "        \n",
+    "    current_line = {\"first\": \"\",\"last\": \"\",}\n",
+    "\n",
+    "    for char in line:\n",
+    "        if char.isnumeric() and not current_line['first']:\n",
+    "            current_line['first'] = char\n",
+    "        if char.isnumeric():\n",
+    "            current_line['last'] = char\n",
+    "            \n",
+    "    calibration_values.append(int(f\"{current_line['first']}{current_line['last']}\"))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-01T23:18:15.698536300Z",
+     "start_time": "2023-12-01T23:18:15.684824700Z"
+    }
+   },
+   "id": "2e4ed3eb17477de5"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part 2 Calibration sum: 53868\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Part 2 Calibration sum: {sum(calibration_values)}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-01T23:18:15.703559500Z",
+     "start_time": "2023-12-01T23:18:15.696014500Z"
+    }
+   },
+   "id": "f5fd794a652bf81c"
   }
  ],
  "metadata": {
