--- a/3/one.ipynb
+++ b/3/one.ipynb
@@ -2,8 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'termcolor'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mregex\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mre\u001B[39;00m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01msys\u001B[39;00m\n\u001B[0;32m----> 3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtermcolor\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m colored\n",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'termcolor'"
+     ]
+    }
+   ],
    "source": [
     "import regex as re\n",
     "import sys\n",
@@ -12,21 +24,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-03T16:51:36.142248400Z",
-     "start_time": "2023-12-03T16:51:36.132392600Z"
+     "end_time": "2023-12-04T08:20:24.185112Z",
+     "start_time": "2023-12-04T08:20:24.085049Z"
     }
    },
    "id": "d5fb863f5b27659d"
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-12-03T16:51:36.143256500Z",
-     "start_time": "2023-12-03T16:51:36.134914Z"
+     "start_time": "2023-12-04T08:20:24.185319Z"
     }
    },
    "outputs": [],
@@ -37,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "line1 = line2 = line3 =\"...\"\n",
@@ -74,24 +85,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-03T16:51:36.161651700Z",
-     "start_time": "2023-12-03T16:51:36.144760800Z"
+     "start_time": "2023-12-04T08:20:24.186265Z"
     }
    },
    "id": "f4278317dc97de1c"
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "528799\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "Sum = 0\n",
     "for partnumber in valid_partnumbers:\n",
@@ -101,8 +103,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-03T16:51:36.166258Z",
-     "start_time": "2023-12-03T16:51:36.161651700Z"
+     "start_time": "2023-12-04T08:20:24.187017Z"
     }
    },
    "id": "d24c210641ebad5b"
