--- a/5/two.ipynb
+++ b/5/two.ipynb
@@ -104,7 +104,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "lowest_loc = 999999999999999999999\n",
+    "lowest_loc = 999_999_999_999\n",
     "for seed_start, runlength in zip(seed_numbers[0::2], seed_numbers[1::2]):\n",
     "    for seed in range(seed_start, seed_start + runlength):\n",
     "        soil = fertilizer = water = light = temp = humidity = location = None\n",
